# TEngine

./: .gitignore  CMakeLists.txt  README.md  build.sh
core/: .gitignore  CMakeLists.txt
core/include/tengine/: Color.hpp  Component.hpp  DataStructs.hpp  Entity.hpp  Input.hpp  Mesh.hpp  MeshInstance.hpp  Point.hpp  Renderer.hpp  Resources.hpp  Scene.hpp  ShaderManager.hpp  Shape.hpp  Transform.hpp  mglApp.hpp  mglCamera.hpp  mglConventions.hpp  mglMesh.hpp  mglShader.hpp  tengine.hpp  test.hpp
core/include/tengine/core/: test.hpp
core/src/tengine/: Entity.cpp  Input.cpp  Mesh.cpp  MeshInstance.cpp  Renderer.cpp  Scene.cpp  ShaderManager.cpp  Transform.cpp  mglApp.cpp  mglCamera.cpp  mglError.cpp  mglMesh.cpp  mglShader.cpp  test.cpp
core/src/tengine/core/: test.cpp
dependencies/include/: .gitignore
dependencies/include/nlohmann/: json.hpp
dependencies/lib/: .gitignore
libs/: CMakeLists.txt
libs/glm/: CTestTestfile.cmake
tangram/: CMakeLists.txt  camera.hpp  common.hpp  door.hpp  hello-2d-world.cpp  main.cpp  save.hpp  tangram  tangram.cpp  tangram.hpp
tangram/assets/entities/: blueTriangle.json  blueTriangleBox.json  greenSquare.json  greenSquareBox.json  orangeTriangle.json  orangeTriangleBox.json  pinkTriangle.json  pinkTriangleBox.json  purpleTriangle.json  purpleTriangleBox.json  redTriangle.json  redTriangleBox.json  tangram.json  yellowTrapezoid.json  yellowTrapezoidBox.json
tangram/assets/meshes/: cube.mtl  square.json  trapezoid.json  trapezoid.mtl  triangle.json  triangle.mtl
tangram/assets/objects/: entities.json  meshes.json
tangram/assets/scenes/: door.json  tangram.json
tangram/assets/shaders/: clip-vs.glsl  cube-fs.glsl  cube-shader.json  cube-vs.glsl  plain-color-vs.glsl  plain-color.json  wood-fs.glsl  wood-shader.json
